fix drag and drop raise with Xwayland windows

They shouldn't be raised immediately. The same strategy as with
Wayland native clients should be used.

BUG: 440534


(cherry picked from commit 42b516b56777bb7b87fa97534a2e9d0b84cbdc18)